--- a/frontend/components/PublicView.css
+++ b/frontend/components/PublicView.css
@@ -8,6 +8,7 @@
   bottom: 0;
   right: 0;
   left: 0;
+  overflow: hidden;
 }
 
 .PublicView__container {
